--- a/index.html
+++ b/index.html
@@ -33,14 +33,21 @@
         </div>
         <div class="topbar">
             <div class="searchbar">
+                <div class="searchicon">
                 <img src="searchicon.jpg">
-                <input type="textarea">
-                <img src="notificationicon.jpg">
+                </div>
+                <div class="search">
+                    <input type="text" class="searchfield" size="60">
+                </div>
+                <img src="notificationicon.jpg" class="notification">
                 <div class="username">Username Placeholder</div>
             </div>
             <div class="buttonbar">
-                <img src="" alt="">
-                <div class="hellomessage"></div>
+                <img src="pfp.jpg">
+                <div class="hellomessage">
+                    <div class="hithere">Hi there,</div>
+                    <div class="user">Name(@Username)</div>
+                </div>
                 <button type="button" class="new">New</button>
                 <button type="button" class="upload">Upload</button>
                 <button type="button" class="share">Share</button>
